--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-pip install numpy pandas pillow opencv-python scikit-learn tensorflow streamlit matplotlib
-streamlit
-tensorflow==2.13.0
-numpy
-pandas
-Pillow
-matplotlib
-reportlab
+streamlit==1.31.0
+numpy==1.23.5
+pandas==1.5.3
+matplotlib==3.7.2
+Pillow==9.5.0
+tensorflow==2.12.0
+reportlab==4.0.4
 
-numpy
-pandas
-pillow
-opencv-python
-scikit-learn
-tensorflow
-streamlit
-matplotlib
-& .venv\Scripts\Activate.ps1
+
+ .venv\Scripts\Activate.ps1
 py -3.10 -m streamlit run app.py
 //do feature selection
