--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
-tensorflow==2.13.0
 numpy
 pandas
-Pillow
+pillow
 matplotlib
-reportlab
-opencv-python
+tensorflow
 scikit-learn
+opencv-python
+reportlab
