--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-streamlit==1.31.0
-numpy==1.23.5
-pandas==1.5.3
-matplotlib==3.7.2
-Pillow==9.5.0
-tensorflow==2.12.0
-reportlab==4.0.4
-
-
- .venv\Scripts\Activate.ps1
-py -3.10 -m streamlit run app.py
-//do feature selection
+streamlit
+tensorflow==2.13.0
+numpy
+pandas
+Pillow
+matplotlib
+reportlab
+opencv-python
+scikit-learn
